--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,336 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appContainer {
+  height: 80vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputShortenerContainer h1 {
+  font-family: "Playfair Display", serif;
+  font-size: 3.5rem;
+  margin-bottom: 1.5rem;
+  color: #fff;
+}
+
+.inputShortenerContainer h1 span {
+  color: var(--primary-color);
+}
+
+.inputShortenerContainer div {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.inputShortenerContainer input {
+  width: 100%;
+  padding: 1rem 0.5rem 1rem 0.2rem;
+  text-indent: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-top-left-radius: 10px;
+}
+
+.inputShortenerContainer input::placeholder {
+  font-size: 0.9rem;
+}
+
+.inputShortenerContainer button,
+.result button {
+  all: unset;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  text-transform: capitalize;
+  position: relative;
+  color: #e7e0e0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
-.App-link {
-  color: #61dafb;
+.inputShortenerContainer button::after,
+.inputShortenerContainer button::before,
+.result button::after,
+.result button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all 0.4s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.inputShortenerContainer button::before,
+.result button::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  border-bottom-right-radius: 10px;
+}
+
+.inputShortenerContainer button::after,
+.result button::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.inputShortenerContainer button:hover::before,
+.result button:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.inputShortenerContainer button:hover::after,
+.result button:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.inputShortenerContainer button:active::after,
+.result button:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
+}
+
+/* * background animation styling */
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #350077;
+  overflow: hidden;
+  z-index: -2;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #bd93ea;
+  overflow: hidden;
+  z-index: -1;
+}
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 21s linear infinite;
+}
+
+.background li:nth-child(0) {
+  left: 62%;
+  width: 202px;
+  height: 202px;
+  bottom: -202px;
+  animation-delay: 1s;
+}
+.background li:nth-child(1) {
+  left: 50%;
+  width: 196px;
+  height: 196px;
+  bottom: -196px;
+  animation-delay: 4s;
+}
+.background li:nth-child(2) {
+  left: 66%;
+  width: 200px;
+  height: 200px;
+  bottom: -200px;
+  animation-delay: 3s;
+}
+.background li:nth-child(3) {
+  left: 47%;
+  width: 110px;
+  height: 110px;
+  bottom: -110px;
+  animation-delay: 11s;
+}
+.background li:nth-child(4) {
+  left: 63%;
+  width: 114px;
+  height: 114px;
+  bottom: -114px;
+  animation-delay: 14s;
+}
+.background li:nth-child(5) {
+  left: 62%;
+  width: 94px;
+  height: 94px;
+  bottom: -94px;
+  animation-delay: 6s;
+}
+.background li:nth-child(6) {
+  left: 63%;
+  width: 141px;
+  height: 141px;
+  bottom: -141px;
+  animation-delay: 11s;
+}
+.background li:nth-child(7) {
+  left: 24%;
+  width: 119px;
+  height: 119px;
+  bottom: -119px;
+  animation-delay: 17s;
+}
+.background li:nth-child(8) {
+  left: 32%;
+  width: 188px;
+  height: 188px;
+  bottom: -188px;
+  animation-delay: 2s;
+}
+.background li:nth-child(9) {
+  left: 63%;
+  width: 150px;
+  height: 150px;
+  bottom: -150px;
+  animation-delay: 40s;
+}
+.background li:nth-child(10) {
+  left: 34%;
+  width: 141px;
+  height: 141px;
+  bottom: -141px;
+  animation-delay: 43s;
+}
+.background li:nth-child(11) {
+  left: 54%;
+  width: 194px;
+  height: 194px;
+  bottom: -194px;
+  animation-delay: 10s;
+}
+.background li:nth-child(12) {
+  left: 52%;
+  width: 102px;
+  height: 102px;
+  bottom: -102px;
+  animation-delay: 56s;
+}
+.background li:nth-child(13) {
+  left: 81%;
+  width: 200px;
+  height: 200px;
+  bottom: -200px;
+  animation-delay: 21s;
+}
+.background li:nth-child(14) {
+  left: 72%;
+  width: 194px;
+  height: 194px;
+  bottom: -194px;
+  animation-delay: 21s;
+}
+.background li:nth-child(15) {
+  left: 85%;
+  width: 95px;
+  height: 95px;
+  bottom: -95px;
+  animation-delay: 35s;
+}
+.background li:nth-child(16) {
+  left: 6%;
+  width: 167px;
+  height: 167px;
+  bottom: -167px;
+  animation-delay: 75s;
+}
+.background li:nth-child(17) {
+  left: 11%;
+  width: 200px;
+  height: 200px;
+  bottom: -200px;
+  animation-delay: 18s;
+}
+.background li:nth-child(18) {
+  left: 60%;
+  width: 178px;
+  height: 178px;
+  bottom: -178px;
+  animation-delay: 12s;
+}
+
+/* * Result styling */
+
+.result {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+
+.result p {
+  color: #fff;
+  border: 1px solid var(--primary-color);
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+}
+
+.result button.copied {
+  background-color: #fff;
+}
+
+.noData {
+  color: #fff;
+  font-size: 1.2rem;
+  font-family: "Playfair Display", serif;
 }
